Archive2/9d/9ce90f4b47d9e1/output
main.cpp: In constructor 'dynarray_storage::dynarray_storage(std::size_t)':
main.cpp:18:10: error: 'bad_array_new_length' is not a member of 'std'
    throw std::bad_array_new_length();
          ^
